# tinygl-dos

./: CMakeLists.txt  LIMITATIONS  README.md  README.old
examples/: CMakeLists.txt  gears.c  triangle.c
include/: zfeatures.h
include/GL/: gl.h  glu.h
src/: CMakeLists.txt  api.c  glu.c  matrix.c  vertex.c  zgl.h
